--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,43 @@
     background-clip: text;
   }
 }
+
+@font-face {
+  font-family: 'Neue Haas Grotesk';
+  src: url('/src/assets/fonts/NeueHaasGrotesk-Roman.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Neue Haas Grotesk';
+  src: url('/src/assets/fonts/NeueHaasGrotesk-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Neue Haas Grotesk';
+  src: url('/src/assets/fonts/NeueHaasGrotesk-Light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Neue Haas Grotesk';
+  src: url('/src/assets/fonts/NeueHaasGrotesk-Thin.ttf') format('truetype');
+  font-weight: 100;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Neue Haas Grotesk';
+  src: url('/src/assets/fonts/NeueHaasGrotesk-Italic.ttf') format('truetype');
+  font-weight: 400;
+  font-style: italic;
+}
+
+body {
+  font-family: 'Neue Haas Grotesk', sans-serif;
+}
+
